# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml
gendiff/: argument_parsing.py  base.py  construction_diff.py  diff.py  generate_diff.py  parser.py  stylish.py
gendiff/formatters/: json_.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_base.py  test_construction_diff.py  test_formatters.py  test_generate_diff.py  test_json_format.py  test_plain.py  test_stylish.py
tests/fixtures/results/: json_nested  json_simple
