[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Generator - Calculates the difference between two data structures"
classifiers = [
    "CLI :: Tool :: Find the Difference",
]
authors = ["Ivan <asgefes1@gmail.com>"]
repository = "https://github.com/Asgef/python-project-50"
readme = "README.md"
packages = [
 {include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
